2007-09-21  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/save.py:
	Fix error saving after splitting project. (#10041)

2007-09-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/renderers/multiline.py (_on_editor_focus_out_event):
	* gaupol/gtk/renderers/time.py (_on_editor_focus_out_event):
	Revert the erroneous 2007-09-18 focus-out-event fixes.

2007-09-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/encoding.py:
	* gaupol/gtk/dialogs/language.py:
	* gaupol/gtk/dialogs/preferences.py:
	* gaupol/gtk/dialogs/search.py:
	* gaupol/gtk/page.py:
	Fix NameErrors with lambda functions. (#10034)

2007-09-18  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/renderers/multiline.py (_on_editor_focus_out_event):
	* gaupol/gtk/renderers/time.py (_on_editor_focus_out_event):
	Return False so that the editing widget gets the event as well.

2007-09-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/data/gaupol.iss:
	Remove EULAish LicenseFile field.

	* tools/py2exe.bat:
	Remove unused iso-codes .mo files.

2007-09-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/__init__.py:
	Bump version number.

	RELEASE 0.11

2007-09-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui.xml:
	* gaupol/gtk/actions/edit.py:
	* gaupol/gtk/agents/edit.py:
	Add actions for extending the current selection up to the first or the
	last subtitle without moving focus or scrolling. (#9895)

2007-09-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/view.py (_init_props):
	Enable rubber-banding.

2007-09-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec:
	Remove search.patterns and search.replacements.

	* gaupol/gtk/dialogs/search.py:
	Save search history to $HOME/.gaupol/search instead of the
	configuration file to avoid quoting problems.

2007-09-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.common-error.in:
	Add quotation marks and apostrophes at the ends of lines to the
	"Spaces before punctuation marks" pattern.
