@@ -1,11 +1,10 @@
 Gaupol 0.12
 ===========
 
- * Add a capitalization task to the text correction assistant
- * Fix no longer working (gtk 2.12) markup tooltip hack
-
+ [ ] Add a capitalization task to the text correction assistant
  [D] Fix error saving after splitting project (#10041)
  [D] Fix NameErrors with lambda functions (#10034)
+ [D] Fix markup tooltip hack to work with (Py)GTK 2.12
  [D] Remove license page from the Windows installer
  [D] Include iso-codes with the Windows installer
 
